add Delete button and logic for it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="type_note_here">Type note here ...</string>
     <string name="add_note">add_Note</string>
     <string name="back_to_all_notes">back to all notes</string>
+    <string name="delete_note">Delete Note</string>
+    <string name="are_you_sure_want_to_delete_this_note">Are you sure want to delete this note?</string>
+    <string name="cancel">Cancel</string>
 </resources>
